--- a/Session 8 - Navigation/app/src/main/AndroidManifest.xml
+++ b/Session 8 - Navigation/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.HarbourUnsplash"
         tools:targetApi="31">
         <activity
-            android:name=".compose.MainComposeActivity"
+            android:name=".ui.compose.MainComposeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,9 +25,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".DetailsActivity" />
-
-        <activity android:name=".compose.AboutComposeActivity" />
+        <activity android:name=".ui.legacy.DetailsActivity" />
 
     </application>
 
